--- a/service.html
+++ b/service.html
@@ -14,21 +14,26 @@
     margin-bottom: 10px;
     margin-left: 90px;
     margin-right: 140px;
-    border: 2px solid;
-    height: 550px;
+    border: 2px ;
+    height: 640px;
     padding: 40px 20px;
+    border-radius: 5px;
+    background-color: #E2EEFA;
 }
         .layar{
         font-size: 20px;
             margin:20px;
             text-align: center;
-            border: 2px solid;
+            border: 1px #DCDCDC;
             width: 220px;
-            height: 250px;
+            height: 280px;
             float: left;
-            background-color: #ccc;
-            padding: 20px 23px 20px;
+            background-color: white;
+            padding: 60px 23px 20px;
         box-sizing: border-box;
+        box-shadow:1px 1px 1px 1px #888888;
+        border-radius: 5px;
+        font-size: 18px;
         }
         .navbar {
             text-align:center;
@@ -45,8 +50,8 @@
             display: inline;
            margin-left: 30px;
             width:250px;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            padding-top: 15px;
+            padding-bottom: 5px;
         }
     </style>
 </head>
@@ -60,36 +65,44 @@
     <span class="layar">
         <img src="asset/image/service.png" alt="serviceone">
             <h4>PAN Card as an Indian Citizen</h4>
+            <a href="Foreign_Citizen.html">ForeignCitizen</a>
     </span>
 
     <span class="layar">
         <img src="asset/image/service1.png" alt="servicesencond">
         <h4>PAN Card as Foreign Citizen</h4>
+        <a href="Foreign_Citizen.html">ForeignCitizen</a>
     </span>
 
     <span class="layar">
         <img src="asset/image/service2.png" alt="servicethird">
         <h4>Download e-PAN</h4>
+        <a href="Download_e-PAN.html">Download e-PAN</a>
     </span>
     <span class="layar">
         <img src="asset/image/service3.png" alt="servicefour">
         <h4>Reprint PAN Card</h4>
+        <a href="Reprint.html">Reprint</a>
     </span>
     <span class="layar">
         <img src="asset/image/servivce4.png" alt="servicefive">
         <h4>Change/Correction in PAN Card</h4>
+        <a href="Change_Correction.html">Change/Correction</a>
     </span>
     <span class="layar">
         <img src="asset/image/service5.png" alt="servicesix">
         <h4>Facility for address update in PAN database through eKYC mode</h4>
+        <a href="address_update_in_PAN.html">Address Update In PAN</a>
     </span>
     <span class="layar">
         <img src="asset/image/service6.png" alt="serviceseven">
         <h4>Track PAN  Card</h4>
+        <a href="Track.html">Track</a>
     </span>
     <span class="layar">
         <img src="asset/image/service7.png" alt="serviceeight">
         <h4>PAN Bulk Verification</h4>
+        <a href="Verification.html">Verification</a>
     </span>
 </div>
 <script src="jquery.min.js"></script>
