--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <script src="jquery.min.js"></script>
     <img src="PANCardLogo.png" alt="pancard">
     <header>
         <nav class="menubar">
@@ -50,7 +51,6 @@
                 <th scope="col" id="gender">State</th>
                 <th scope="col">Action</th>
                 <th scope="col">Status</th>
-                <th scope="col">User Status</th>
                 <th scope="col">Update</th>
             </tr>
         </thead>
