--- a/details.html
+++ b/details.html
@@ -42,6 +42,7 @@ h2{
 </head>
 
 <body>
+    <script src="jquery.min.js"></script>
     <div class="containerOfDetails">
         <h2>REQUESTDETAILS</h2>
     <table>
