--- a/loginpage.html
+++ b/loginpage.html
@@ -22,6 +22,7 @@
     </script>
   <link rel="stylesheet" href="loginpage.css">
   <h1>LOGIN FORM</h1>
+<img src="asset/image/pan-card.png">
   <div class="overall">
     <form onsubmit="loginpage()">
       <label for="username"><strong>User Name</strong></label>
