--- a/requestchange.html
+++ b/requestchange.html
@@ -71,10 +71,25 @@
                    </span>
                 <button type="submit"> Submit </button>
             </form>
-        </div>
-    </div>
-</body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </html>
+        </div>
+    </div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+<div class="footerpage">
+    <footer>
+    <div class="col item social">
+        <a href="#"><em class="icon ion-social-whatsapp"></em></a>
+        <a href="#" ><em class="icon ion-social-facebook"></em></a>
+        <a href="#"><em class="icon ion-social-instagram"></em></a>
+        <a href="#"><em class="ricon ion-social-google"></em></a> 
+        <a href="#"><em class="ricon ion-social-twitter"></em></a> 
+    </div>
+    <p>
+        Online Pan Card Quick & Pan Card Application
+    </p>
+</footer>
+</div>
+</body>
