--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <link rel="stylesheet" href="admin.css">
+  <script src="jquery.min.js"></script>
+    <link rel="stylesheet" href="admin.css">
   <h1>ADMIN</h1>
   <div class="overall">
     <form onsubmit="adminpage()">
@@ -18,10 +19,12 @@
       <input type="text" id="userName" placeholder="Enter User Name" name="adminName" autocomplete="off" required>
       <label for="password"><strong>Password</strong></label>
       <input type="password" minlength="6" id="password" placeholder="Enter Password" required>
-      <button type="submit">Login</button>
+      <button type="submit">Login</button> 
     </form>
     <script src="admin.js">
     </script>
   </div>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+      <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </body>
 </html>
