--- a/listapplication.html
+++ b/listapplication.html
@@ -50,6 +50,21 @@
         <tbody id="applicationTable"></tbody>
     </table>
     </div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+<div class="footerpage">
+    <footer>
+    <div class="col item social">
+        <a href="#"><em class="icon ion-social-whatsapp"></em></a>
+        <a href="#" ><em class="icon ion-social-facebook"></em></a>
+        <a href="#"><em class="icon ion-social-instagram"></em></a>
+        <a href="#"><em class="ricon ion-social-google"></em></a>
+        <a href="#"><em class="ricon ion-social-twitter"></em></a>  
+    </div>
+    <p>
+        Online Pan Card Quick & Pan Card Application
+    </p>
+</footer>
+</div>
 </body>
 
 </html>
