--- a/service.html
+++ b/service.html
@@ -10,13 +10,16 @@
             padding: 0%;
             margin: 0%;
         }
+        h4{
+            margin-bottom: 20px;
+        }
 .service{
     margin-bottom: 10px;
     margin-left: 90px;
     margin-right: 140px;
     border: 2px ;
     height: 640px;
-    padding: 40px 20px;
+    padding: 35px;
     border-radius: 5px;
     background-color: #E2EEFA;
 }
@@ -30,14 +33,14 @@
             background-color: white;
             padding: 60px 23px 20px;
         box-sizing: border-box;
-        box-shadow:1px 1px 1px 1px #888888;
+        box-shadow:3px 3px 3px 3px #888888;
         border-radius: 5px;
-        font-size: 18px;
+        font-size: 14px;
         }
         .navbar {
             text-align:center;
-            margin-top:18px;
-            margin-bottom: 18px;
+            margin-top:15px;
+            margin-bottom: 20px;
             display: inline-block;
             background-color: rgb(0,119,144);
            color: whitesmoke;
@@ -52,6 +55,37 @@
             padding-top: 15px;
             padding-bottom: 5px;
         }
+        /* Footer CSS */
+
+      *{
+        margin: 0%;
+        padding:0%;
+    }
+    .footerpage{
+        background-color: #808080;
+        height: 80px;
+    }
+    .footerpage .social a{
+        font-size:20px;
+        width:36px;
+        height:36px;
+        line-height:36px;
+        display:inline-block;
+        text-align:center;
+        border-radius:50%;
+        box-shadow:0 0 0 2px rgba(255,255,255,0.4);
+        margin-left: 20px;
+        color:#fff;
+    }
+    .item{
+        margin-left: 500px;
+        padding-top: 10px; 
+    }
+    p{
+        margin-top: 11px;
+        color: white;
+        text-align: center;
+    }
     </style>
 </head>
 <body>
@@ -108,5 +142,20 @@
       <script>
             $("#header").load("header.html")
       </script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+      <div class="footerpage">
+          <footer>
+          <div class="col item social">
+              <a href="#"><em class="icon ion-social-whatsapp"></em></a>
+              <a href="#" ><em class="icon ion-social-facebook"></em></a>
+              <a href="#"><em class="icon ion-social-instagram"></em></a>
+              <a href="#"><em class="ricon ion-social-google"></em></a> 
+              <a href="#"><em class="ricon ion-social-twitter"></em></a> 
+          </div>
+          <p>
+              Online Pan Card Quick & Pan Card Application
+          </p>
+      </footer>
+      </div>
 </body>
 </html>
