Seperate file js and css

--- a/admin.html
+++ b/admin.html
@@ -6,12 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ADMIN</title>
-
 </head>
-
 <body>
-  <script src="jquery.min.js"></script>
-    <link rel="stylesheet" href="admin.css">
   <h1>ADMIN</h1>
   <div class="overall">
     <form onsubmit="adminpage()">
@@ -21,10 +17,13 @@
       <input type="password" minlength="6" id="password" placeholder="Enter Password" required>
       <button type="submit">Login</button> 
     </form>
-    <script src="admin.js">
+    <script src="asset/js/admin.js">
     </script>
   </div>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-      <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  <script src="asset/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="asset/CSS/admin.css">
+  <link rel="stylesheet"
+   href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </body>
 </html>
