--- a/details.html
+++ b/details.html
@@ -42,7 +42,7 @@ h2{
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <div class="containerOfDetails">
         <h2>REQUESTDETAILS</h2>
     <table>
@@ -82,7 +82,7 @@ h2{
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <script src="details.js"></script>
+    <script src="asset/js/details.js"></script>
     
 </body>
 </html>
