--- a/editpage.html
+++ b/editpage.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODIFYDETAILS</title>
-    <link rel="stylesheet" href="editpage.css">
+    <link rel="stylesheet" href="asset/CSS/editpage.css">
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <div class="editpage">
         <h2>EDIT DETAILS</h2>
         <table>
@@ -116,8 +116,7 @@
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <script src="edit.js"></script>
-    <script src="serviceLayer.js"></script>
+    <script src="asset/js/edit.js"></script>
+    <script src="asset/js/serviceLayer.js"></script>
 </body>
-
 </html>
