--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             crossorigin="anonymous"
              referrerpolicy="no-referrer"></script>
 
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="asset/CSS/index.css">
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
       <br>
       <header id="header"></header>
-      <script src="jquery.min.js"></script>
+      <script src="asset/js/sjquery.min.js"></script>
       <script>
             $("#header").load("header.html")
       </script>
@@ -111,8 +111,8 @@
                         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
                         crossorigin="anonymous" referrerpolicy="no-referrer">
                         </script>
-                  <script src="index.js"> </script>
-                  <script src="serviceLayer.js"></script>
+                  <script src="asset/js/index.js"> </script>
+                  <script src="asset/js/serviceLayer.js"></script>
             </div>
       </div>
 
