--- a/loginpage.html
+++ b/loginpage.html
@@ -9,7 +9,7 @@
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <script src="jquery.min.js"></script>
+  <script src="asset/js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
     integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
     crossorigin="anonymous"
@@ -20,7 +20,7 @@
     crossorigin="anonymous"
      referrerpolicy="no-referrer">
     </script>
-  <link rel="stylesheet" href="loginpage.css">
+  <link rel="stylesheet" href="asset/CSS/loginpage.css">
   <h1>LOGIN FORM</h1>
 <img src="asset/image/pan-card.png">
   <div class="overall">
@@ -32,8 +32,8 @@
       <button type="submit">Login</button>
       <button><a href="registration.html">Registration</a></button>
     </form>
-    <script src="serviceLayer.js"></script>
-    <script src="loginpage.js">
+    <script src="asset/js/serviceLayer.js"></script>
+    <script src="asset/js/loginpage.js">
     </script>
      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
      <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
