--- a/requestchange.html
+++ b/requestchange.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTCHANGE</title>
-    <link rel="stylesheet" href="requestchange.css">
+    <link rel="stylesheet" href="asset/CSS/requestchange.css">
 </head>
 
 <body>
@@ -14,10 +14,10 @@
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <script src="requestchange.js"></script>
+    <script src="asset/js/requestchange.js"></script>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header id="header"></header>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <script>
         $("#header").load("header.html")
     </script>
@@ -71,7 +71,9 @@
                    </span>
                 <button type="submit"> Submit </button>
             </form>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+             crossorigin="anonymous"></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </html>
