--- a/userlist.html
+++ b/userlist.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USER LIST</title>   
-  <link rel="stylesheet" href="userlist.css">
+  <link rel="stylesheet" href="asset/CSS/userlist.css">
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header>
         <nav class="menubar">
@@ -36,7 +36,7 @@
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
-        <script src="userlist.js"></script>
+        <script src="asset/js/userlist.js"></script>
         <table id="tableData">
             <caption></caption>
             <thead>
@@ -52,6 +52,6 @@
         </table>
     </div>
 </body>
-<script src="routes.js"></script>
+<script src="asset/js/routes.js"></script>
 
 </html>
