--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LISTAPPLICATION</title>
 
-    <link rel="stylesheet" href="adminlistapplication.css">
+    <link rel="stylesheet" href="asset/CSS/adminlistapplication.css">
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <img src="PANCardLogo.png" alt="pancard">
     <header>
         <nav class="menubar">
@@ -61,12 +61,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
         integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="serviceLayer.js"></script>
+    <script src="asset/js/serviceLayer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <script src="adminlistapplication.js"></script>
-<script src="routes.js"></script>
+    <script src="asset/js/adminlistapplication.js"></script>
+<script src="asset/js/routes.js"></script>
 
 </html>
