--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTAPPLICATION</title>   
-  <link rel="stylesheet" href="adminrequestapplication.css">
+  <link rel="stylesheet" href="asset/CSS/adminrequestapplication.css">
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header>
         <nav class="menubar">
@@ -36,7 +36,7 @@
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
-        <script src="adminrequestapplication.js"></script>
+        <script src="asset/js/adminrequestapplication.js"></script>
         <table id="table">
             <caption></caption>
             <thead>
@@ -56,7 +56,7 @@
     </div>
     <!-- Sweet Alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
-    <script src="routes.js"></script> 
+    <script src="asset/js/routes.js"></script> 
 </body>
 
 
