--- a/listapplication.html
+++ b/listapplication.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LISTAPPLICATION</title>
 
-    <link rel="stylesheet" href="listapplication.css">
+    <link rel="stylesheet" href="asset/CSS/listapplication.css">
 </head>
 
 <body>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header id="header"></header>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <script>
         $("#header").load("header.html")
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
         integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="serviceLayer.js"></script>
+    <script src="asset/js/serviceLayer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <script src="listapplication.js"></script>
+    <script src="asset/js/listapplication.js"></script>
     <h2>LIST OF APPLICATION</h2>
     <div class="searchbar">
         <div class="search__container">
