--- a/registration.html
+++ b/registration.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REGISTRATION</title>
-    <script src="validator.js"></script>
-    <script src="password.js"></script>
-    <script src="registration.js"></script>
+    <script src="asset/js/validator.js"></script>
+    <script src="asset/js/password.js"></script>
+    <script src="asset/js/registration.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
-    <link rel="stylesheet" href="registration.css">
+    <link rel="stylesheet" href="asset/CSS/registration.css">
 </head>
 
 <body>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <h1>REGISTRATION</h1>
     <div class="overall">
         <form onsubmit="registration()">
@@ -52,8 +52,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
     integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="serviceLayer.js"></script>
+    <script src="asset/js/serviceLayer.js"></script>
 </body>
-
-
 </html>
