--- a/requestapplication.html
+++ b/requestapplication.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTAPPLICATION</title>   
-  <link rel="stylesheet" href="requestapplication.css">
+  <link rel="stylesheet" href="asset/CSS/requestapplication.css">
 </head>
-
 <body>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header id="header"></header>
-    <script src="jquery.min.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
     <script>
         $("#header").load("header.html")
     </script>
@@ -22,7 +21,7 @@
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
-        <script src="requestapplication.js"></script>
+        <script src="asset/js/requestapplication.js"></script>
         <table id="table">
             <caption></caption>
             <thead>
