--- a/service.html
+++ b/service.html
@@ -5,88 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICE</title>
-    <style>
-        *{
-            padding: 0%;
-            margin: 0%;
-        }
-        h4{
-            margin-bottom: 20px;
-        }
-.service{
-    margin-bottom: 10px;
-    margin-left: 90px;
-    margin-right: 140px;
-    border: 2px ;
-    height: 640px;
-    padding: 35px;
-    border-radius: 5px;
-    background-color: #E2EEFA;
-}
-        .layar{
-            margin:20px;
-            text-align: center;
-            border: 1px #DCDCDC;
-            width: 220px;
-            height: 280px;
-            float: left;
-            background-color: white;
-            padding: 60px 23px 20px;
-        box-sizing: border-box;
-        box-shadow:3px 3px 3px 3px #888888;
-        border-radius: 5px;
-        font-size: 14px;
-        }
-        .navbar {
-            text-align:center;
-            margin-top:15px;
-            margin-bottom: 20px;
-            display: inline-block;
-            background-color: rgb(0,119,144);
-           color: whitesmoke;
-            padding: 0.5px 64.8px;
-            text-decoration: none;
-            list-style-type: none;
-        }
-        .logo img{
-            display: inline;
-           margin-left: 30px;
-            width:250px;
-            padding-top: 15px;
-            padding-bottom: 5px;
-        }
-        /* Footer CSS */
-
-      *{
-        margin: 0%;
-        padding:0%;
-    }
-    .footerpage{
-        background-color: #808080;
-        height: 80px;
-    }
-    .footerpage .social a{
-        font-size:20px;
-        width:36px;
-        height:36px;
-        line-height:36px;
-        display:inline-block;
-        text-align:center;
-        border-radius:50%;
-        box-shadow:0 0 0 2px rgba(255,255,255,0.4);
-        margin-left: 20px;
-        color:#fff;
-    }
-    .item{
-        margin-left: 500px;
-        padding-top: 10px; 
-    }
-    p{
-        margin-top: 11px;
-        color: white;
-        text-align: center;
-    }
-    </style>
+    <link rel="stylesheet" href="asset/CSS/service.css">
 </head>
 <body>
     <div class="logo">
@@ -138,7 +57,7 @@
         <a href="Verification.html">Verification</a>
     </span>
 </div>
-<script src="jquery.min.js"></script>
+<script src="asset/js/jquery.min.js"></script>
       <script>
             $("#header").load("header.html")
       </script>
