--- a/loginpage.html
+++ b/loginpage.html
@@ -22,7 +22,7 @@
     </script>
   <link rel="stylesheet" href="asset/CSS/loginpage.css">
   <h1>LOGIN FORM</h1>
-<img src="asset/image/pan-card.png">
+<img src="asset/image/pan-card.png" alt="loginsideimage">
   <div class="overall">
     <form onsubmit="loginpage()">
       <label for="username"><strong>User Name</strong></label>
