--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -30,12 +30,17 @@
             </ul>
         </nav>
     </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+    integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
     <h2><strong>REQUEST APPLICATION </strong></h1>
     <div class="viewBar">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
+            <script src="asset/js/serviceLayer.js"></script>
         <script src="asset/js/adminrequestapplication.js"></script>
         <table id="table">
             <caption></caption>
@@ -54,6 +59,7 @@
             <tbody id="requestTable"></tbody>
         </table>
     </div>
+    
     <!-- Sweet Alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
     <script src="asset/js/routes.js"></script> 
