--- a/requestchange.html
+++ b/requestchange.html
@@ -21,6 +21,7 @@
     <script>
         $("#header").load("header.html")
     </script>
+    <script src="asset/js/serviceLayer.js"></script>
     <div class="overall">
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
