--- a/details.html
+++ b/details.html
@@ -82,6 +82,7 @@ h2{
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
+        <script src="asset/js/serviceLayer.js"></script>
     <script src="asset/js/details.js"></script>
     
 </body>
