--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
       </script>
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
       <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
-            integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
-            crossorigin="anonymous"
-             referrerpolicy="no-referrer"></script>
-
       <link rel="stylesheet" href="asset/CSS/index.css">
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
       <br>
       <header id="header"></header>
-      <script src="asset/js/sjquery.min.js"></script>
+      <script src="asset/js/jquery.min.js"></script>
       <script>
             $("#header").load("header.html")
       </script>
