--- a/requestapplication.html
+++ b/requestapplication.html
@@ -17,11 +17,13 @@
     </script>
     <h2><strong>REQUEST APPLICATION </strong></h1>
     <div class="viewBar">
+        <script src="asset/js/serviceLayer.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
         <script src="asset/js/requestapplication.js"></script>
+        
         <table id="table">
             <caption></caption>
             <thead>
