--- a/details.html
+++ b/details.html
@@ -5,43 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APPLICANTDETAILS</title>
-    <style>
-*{
-    margin: 0%;
-    padding: 0;
-}
-button{
-    margin-left: 470px;
-    border-radius: 5px; 
-            background-color: #04AA6D;
-            color: white;
-            margin-top: 10px;
-            border: none;
-            padding: 10px;
-            width: 30%;
-            margin-bottom: 10px;
-}
-a{
-    color: white;
-    text-decoration: none;
-}
-table{
-    border: 1px solid #ccc;
-    background-color: #f2f2f2;
-    width: 500px;
-    height: 550px;
-    margin: auto;
-    padding: 15px;
-    border-radius: 20px;
-}
-h2{
-    padding: 15px;
-    text-align: center;
-}
- </style>
+    <link rel="stylesheet" href="asset/CSS/details.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
-
 <body>
+    <div class="breadcrumbs">
+        <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="listapplication.html">List Application</a></li>
+        </ul>
+  </div>
     <script src="asset/js/jquery.min.js"></script>
     <div class="containerOfDetails">
         <h2>REQUESTDETAILS</h2>
