--- a/editpage.html
+++ b/editpage.html
@@ -7,9 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODIFYDETAILS</title>
     <link rel="stylesheet" href="asset/CSS/editpage.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 
 <body>
+    <div class="breadcrumbs">
+        <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="listapplication.html">List Application</a></li>
+              <li><a href="editpage.html">Edit Application</a></li>
+        </ul>
+  </div>
     <script src="asset/js/jquery.min.js"></script>
     <div class="editpage">
         <h2>EDIT DETAILS</h2>
