--- a/loginpage.html
+++ b/loginpage.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LOGINPAGE</title>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="icon" href="asset/image/panfavicon (2).png">
+  <link rel="stylesheet" href="asset/CSS/loginpage.css">
 </head>
 <body>
-  <link rel="stylesheet" href="asset/CSS/loginpage.css">
+  
   <h1>LOGIN FORM</h1>
 <img src="asset/image/pan-card.png" alt="loginsideimage">
   <div class="overall">
@@ -21,7 +23,7 @@
       <button type="submit">Login</button>
       <button><a href="registration.html">Registration</a></button>
     </form>
-    
+
     <script src="asset/js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
     integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
