--- a/registration.html
+++ b/registration.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
     <link rel="stylesheet" href="asset/CSS/registration.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
            
             <button class="submit" type="submit">Submit</button>
             <button><a href="loginpage.html">Already login</a></button>
-            <button><a href="admin.html">Admin</a></button>
+            <button><a href="adminlogin.html">Admin</a></button>
          </form>
     </div>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
