--- a/requestchange.html
+++ b/requestchange.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTCHANGE</title>
     <link rel="stylesheet" href="asset/CSS/requestchange.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+   
 </head>
-
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
-        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
-    <script src="asset/js/requestchange.js"></script>
-    <img src="asset/image/PANCardLogo.png" alt="pancard">
+    <a href="index.html">  <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
     <header id="header"></header>
-    <script src="asset/js/jquery.min.js"></script>
-    <script>
-        $("#header").load("header.html")
-    </script>
-    <script src="asset/js/serviceLayer.js"></script>
+    
     <div class="overall">
+        <div class="breadcrumbs">
+            <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="requestchange.html">Request Change</a></li>
+            </ul>
+      </div>
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
             <form onsubmit=" requestChange()">
@@ -72,27 +72,26 @@
                    </span>
                 <button type="submit"> Submit </button>
             </form>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-             crossorigin="anonymous"></script>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+            integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
+     </script>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+         crossorigin="anonymous">
+   </script>
+ <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 </html>
         </div>
     </div>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-<div class="footerpage">
-    <footer>
-    <div class="col item social">
-        <a href="#"><em class="icon ion-social-whatsapp"></em></a>
-        <a href="#" ><em class="icon ion-social-facebook"></em></a>
-        <a href="#"><em class="icon ion-social-instagram"></em></a>
-        <a href="#"><em class="ricon ion-social-google"></em></a> 
-        <a href="#"><em class="ricon ion-social-twitter"></em></a> 
-    </div>
-    <p>
-        Online Pan Card Quick & Pan Card Application
-    </p>
-</footer>
-</div>
+   
+    <footer id="footer"></footer>
+    <script src="asset/js/jquery.min.js"></script>
+    <script src="asset/js/requestchange.js"></script>
+    <script src="asset/js/serviceLayer.js"></script>
+    <script>
+        $("#header").load("header.html")
+        $("#footer").load("footer.html")
+    </script>
 </body>
