--- a/service.html
+++ b/service.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICE</title>
     <link rel="stylesheet" href="asset/CSS/service.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
+   
     <div class="logo">
-    <img src="asset/image/PANCardLogo.png" alt="pancard">
+        <a href="index.html">   <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
 </div>
     <header id="header"></header>
+    <div class="breadcrumbs">
+        <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="service.html">Service</a></li>
+        </ul>
+  </div>
     <div class="service">
         
     <span class="layar">
@@ -57,24 +66,11 @@
         <a href="Verification.html">Verification</a>
     </span>
 </div>
-<script src="asset/js/jquery.min.js"></script>
+   <footer id="footer"></footer>
+  <script src="asset/js/jquery.min.js"></script>
       <script>
             $("#header").load("header.html")
+            $("#footer").load("footer.html")
       </script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-      <div class="footerpage">
-          <footer>
-          <div class="col item social">
-              <a href="#"><em class="icon ion-social-whatsapp"></em></a>
-              <a href="#" ><em class="icon ion-social-facebook"></em></a>
-              <a href="#"><em class="icon ion-social-instagram"></em></a>
-              <a href="#"><em class="ricon ion-social-google"></em></a> 
-              <a href="#"><em class="ricon ion-social-twitter"></em></a> 
-          </div>
-          <p>
-              Online Pan Card Quick & Pan Card Application
-          </p>
-      </footer>
-      </div>
 </body>
 </html>
