--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LISTAPPLICATION</title>
-
     <link rel="stylesheet" href="asset/CSS/adminlistapplication.css">
+    <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 <body>
    
