--- a/adminlogin.html
+++ b/adminlogin.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ADMIN</title>
+  <link rel="stylesheet" href="asset/CSS/admin.css">
+  <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 <body>
   <h1>ADMIN</h1>
@@ -21,7 +23,7 @@
     </script>
   </div>
   <script src="asset/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="asset/CSS/admin.css">
+  
   <link rel="stylesheet"
    href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
