--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTAPPLICATION</title>   
   <link rel="stylesheet" href="asset/CSS/adminrequestapplication.css">
+  <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 
 <body>
