--- a/lastpage.html
+++ b/lastpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>APPLIED</title>
+<link rel="icon" href="asset/image/panfavicon (2).png">
     <style>
         body{
             background-image:url(image12.jpg)
