--- a/requestapplication.html
+++ b/requestapplication.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REQUESTAPPLICATION</title>   
   <link rel="stylesheet" href="asset/CSS/requestapplication.css">
+  <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 <body>
-    <img src="asset/image/PANCardLogo.png" alt="pancard">
+    <a href="index.html"> <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
     <header id="header"></header>
-    <script src="asset/js/jquery.min.js"></script>
-    <script>
-        $("#header").load("header.html")
-    </script>
     <h2><strong>REQUEST APPLICATION </strong></h1>
     <div class="viewBar">
         <script src="asset/js/serviceLayer.js"></script>
@@ -22,8 +19,6 @@
             integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
-        <script src="asset/js/requestapplication.js"></script>
-        
         <table id="table">
             <caption></caption>
             <thead>
@@ -41,6 +36,15 @@
             <tbody id="requestTable"></tbody>
         </table>
     </div>
+    <footer id="footer"></footer>
+    <script src="asset/js/requestapplication.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
+    
+    <script>
+        $("#header").load("header.html")
+        $("#footer").load("footer.html")
+    </script>
 </body>
+
 
 </html>
