--- a/userlist.html
+++ b/userlist.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USER LIST</title>   
   <link rel="stylesheet" href="asset/CSS/userlist.css">
+  <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 
 <body>
