Skill Gaps Work

--- a/adminheader.html
+++ b/adminheader.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="PANCardLogo.png" alt="pancard">
+    <figure><img src="PANCardLogo.png" alt="pancard"></figure>
     <header>
         <nav class="menubar">
             <ul>
