--- a/adminrequestapplication.html
+++ b/adminrequestapplication.html
@@ -12,7 +12,7 @@
 
 <body>
     <script src="asset/js/jquery.min.js"></script>
-    <img src="asset/image/PANCardLogo.png" alt="pancard">
+    <figure><img src="asset/image/PANCardLogo.png" alt="pancard"></figure>
     <header>
         <nav class="menubar">
             <ul>
