--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div id="loader"></div>
             <div style="display: none" id="myDiv" class="animate-bottom">
       
-      <img src="asset/image/PANCardLogo.png" alt="pancard">
+   <figure>   <img src="asset/image/PANCardLogo.png" alt="pancard"></figure>
       <br>
       <header id="header"></header>
       
-      <h1>ONLINE APPLY PAN CARD</h1>
+      <h1>ONLINE APPLY PAN CARD</h1> 
       <div class="overall">
             <div class="personal">
                   <div class="h2">
