--- a/requestapplication.html
+++ b/requestapplication.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="asset/image/panfavicon (2).png">
 </head>
 <body>
-    <a href="index.html"> <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
+  <figure>  <a href="index.html"> <img src="asset/image/PANCardLogo.png" alt="pancard"></a> </figure>
     <header id="header"></header>
     <h2><strong>REQUEST APPLICATION </strong></h1>
     <div class="viewBar">
