--- a/adminlistapplication.html
+++ b/adminlistapplication.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    
-    <img src="PANCardLogo.png" alt="pancard">
+ <figure>   <img src="PANCardLogo.png" alt="pancard"></figure>
     <header>
         <nav class="menubar">
             <ul>
