--- a/listapplication.html
+++ b/listapplication.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-  <a href="index.html">  <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
+ <figure> <a href="index.html"> 
+       <img src="asset/image/PANCardLogo.png" alt="pancard"></a></figure>
     <header id="header"></header>
     <div class="breadcrumbs">
         <ul>
