--- a/loginpage.html
+++ b/loginpage.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="asset/image/panfavicon (2).png" />
     <link rel="stylesheet" href="asset/CSS/loginpage.css" />
   </head>
+  <body>
       <h1>LOGIN FORM</h1>
       <img src="asset/image/pan-card.png" alt="loginsideimage" />
       <div class="overall">
