--- a/requestchange.html
+++ b/requestchange.html
@@ -13,7 +13,7 @@
    
 </head>
 <body>
-    <a href="index.html">  <img src="asset/image/PANCardLogo.png" alt="pancard"></a>
+ <figure>   <a href="index.html">  <img src="asset/image/PANCardLogo.png" alt="pancard"></a></figure>
     <header id="header"></header>
     
     <div class="overall">
