Skill Gaps Work

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="asset/CSS/about.css">
 </head>
 <body>
+  <div class="parantdivision">
    <figure> <img src="asset/image/PANCardLogo.png" alt="pancard"></figure>
     <header id="header"></header>
     <div class="aboutus">
@@ -67,7 +68,7 @@
   </div>
 </div>
 </div>
-
+</div>
 <footer id="footer"></footer>
 <script src="asset/js/jquery.min.js"></script>
     <script>
