--- a/loginpage.html
+++ b/loginpage.html
@@ -3,34 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>LOGINPAGE</title>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="icon" href="asset/image/panfavicon (2).png" />
-    <link rel="stylesheet" href="asset/CSS/loginpage.css" />
+    <link rel="icon" href="asset/image/panfavicon (2).png" >
+    <link rel="stylesheet" href="asset/CSS/loginpage.css" >
   </head>
   <body>
+    <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <strong>Success</strong>
+    </div>
       <h1>LOGIN FORM</h1>
-      <img src="asset/image/pan-card.png" alt="loginsideimage" />
+      <div class="sideimage">
+      <img src="asset/image/pan-card.png" alt="loginsideimage" >
+    </div>
       <div class="overall">
         <form onsubmit="loginpage()">
           <label for="username"><strong>User Name</strong></label>
-          <input
-            type="text"
-            id="username"
-            placeholder="Enter User Name"
-            name="uname"
-          />
+          <input type="text" id="username" placeholder="Enter User Name" name="uname">
           <label for="password"><strong>Password</strong></label>
-          <input
-            type="password"
-            minlength="6"
-            id="password"
-            placeholder="Enter Password"
-          />
+          <input type="password"  minlength="6" id="password" placeholder="Enter Password">
           <button type="submit">Login</button>
-          <button><a href="registration.html">Registration</a></button>
+          <button><a href="registration.html">Registration</a></button>      
         </form>
+
 
         <script src="asset/js/jquery.min.js"></script>
         <script
@@ -52,6 +49,6 @@
           href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"/>
         <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
       </div>
-    </div>
+     
   </body>
 </html>
